--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -47,14 +47,14 @@ p {
 .careerback {
   background-image: url("../assets/careersbackground.jpg");
   background-size: cover;
-  background-position: relative;
+  background-position: absolute;
   height: 100%;
 }
 
 .directoryback {
   background-image: url("../assets/directorybackground.jpg");
   background-size: cover;
-  background-position: relative;
+  background-position: absolute;
   height: 100%;
 }
 
@@ -100,4 +100,58 @@ p {
     rgb(195, 209, 230, 0.5)
   );
   box-shadow: 3px 6px rgba(0, 0, 0, 0.2);
+}
+
+.careersection {
+  position: static;
+  display: block;
+  float: left;
+  margin: 40px 42px;
+  background-color: rgba(255, 255, 255);
+  border-radius: 16px;
+  outline: 10px, white;
+  width: 560px;
+  height: 365px;
+  padding: 1vw;
+  overflow-wrap: initial;
+  border: 1px solid rgb(68, 68, 68);
+  background-color: rgba(255, 255, 255, 0.397);
+  background-image: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0.089),
+    rgb(195, 209, 230, 0.5)
+  );
+  box-shadow: 3px 6px rgba(0, 0, 0, 0.2);
+}
+
+.nabsection {
+  position: static;
+  display: block;
+  float: left;
+  margin: 115px 42px;
+  background-color: rgba(255, 255, 255);
+  border-radius: 16px;
+  outline: 10px, white;
+  width: 1250px;
+  height: 475px;
+  padding: 1vw;
+  overflow-wrap: initial;
+  border: 1px solid rgb(68, 68, 68);
+  background-color: rgba(255, 255, 255, 0.397);
+  background-image: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0.089),
+    rgb(195, 209, 230, 0.5)
+  );
+  box-shadow: 3px 6px rgba(0, 0, 0, 0.2);
+}
+
+.careertopblock{
+text-align: center;
+color:white;
+margin-top: 60px;
+padding: 15px 15px;
+background-color: rgba(0, 0, 0, 0.75);
+min-width: 1vw;
+height:100px;
 }
