--- a/src/components/nav-bar/style.css
+++ b/src/components/nav-bar/style.css
@@ -1,14 +1,104 @@
-.App {
-    text-align: center;
+@font-face {
+  font-family: "Univers";
+  src: url("../../assets/fonts/Univers-Font/UniversBlack.ttf");
+  src: url("../../assets/fonts/Univers-Font/UniversBlack.ttf")
+      format("truetype");
 }
-
-nav {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    min-height: 10vh;
-    min-width: 100vw;
-    background: rgba(0, 0, 0, 0.75);
-    color: antiquewhite;
+.resize {
+    width: 140px;
+    height: auto;
     position: absolute;
+    padding-top: 5px;
 }
+.centeralign{ 
+    width: 0vw;
+    margin-left: auto;
+    margin-right: auto;
+    padding-right: 135px;
+}
+.text-right {
+    display: block;
+    margin-left: auto;
+    margin-right: 0;
+    text-align: right;
+    padding-right: 40px;
+    font-family: "Univers", Helvetica, sans-serif;
+    color: white;
+    font-size: 1.3vw;
+    line-height: 0;
+}
+.overlay {
+    height: 0vh;
+}
+.navbar {
+    background-color: rgba(0, 0, 0, 0.75);
+    height: 60px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+  }
+  
+  .menu-bars {
+    margin-left: 2rem;
+    font-size: 2rem;
+    background: none;
+  }
+  
+  .nav-menu {
+    background-color: #000000c5;
+    width: 250px;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    left: -100%;
+    transition: 850ms;
+  }
+  
+  .nav-menu.active {
+    left: 0;
+    transition: 350ms;
+  }
+  
+  .nav-text {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    padding: 8px 0px 8px 16px;
+    list-style: none;
+    height: 60px;
+  }
+  
+  .nav-text a {
+    text-decoration: none;
+    color: #f5f5f5;
+    font-size: 18px;
+    width: 95%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding: 0 16px;
+    border-radius: 4px;
+  }
+  
+  .nav-text a:hover {
+    background-color: #1a83ff;
+  }
+  
+  .nav-menu-items {
+    width: 100%;
+  }
+  
+  .navbar-toggle {
+    background-color: #060b26;
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+  }
+  
+  span {
+    margin-left: 16px;
+  }
