--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,3 +1,5 @@
+@import url("https://cdn.syncfusion.com/ej2/material.css");
+
 main {
   min-height: 100vh;
   background-image: linear-gradient(
@@ -35,6 +37,7 @@ p {
   background-size: cover;
   background-position: relative;
   height: 100%;
+  position: relative;
 }
 
 .calendarback {
@@ -42,6 +45,7 @@ p {
   background-size: cover;
   background-position: relative;
   height: 100%;
+  position: relative;
 }
 
 .careerback {
@@ -49,6 +53,7 @@ p {
   background-size: cover;
   background-position: absolute;
   height: 100%;
+  position: relative;
 }
 
 .directoryback {
@@ -56,6 +61,7 @@ p {
   background-size: cover;
   background-position: absolute;
   height: 100%;
+  position: relative;
 }
 
 .fnaback {
@@ -70,6 +76,7 @@ p {
   background-size: cover;
   background-position: relative;
   height: 100%;
+  position: relative;
 }
 
 .idleback {
@@ -84,7 +91,7 @@ p {
   position: static;
   display: block;
   float: left;
-  margin: 100px 42px;
+  margin: 120px 42px;
   background-color: rgba(255, 255, 255);
   border-radius: 16px;
   outline: 10px, white;
@@ -106,7 +113,7 @@ p {
   position: static;
   display: block;
   float: left;
-  margin: 40px 42px;
+  margin: 40px 46px;
   background-color: rgba(255, 255, 255);
   border-radius: 16px;
   outline: 10px, white;
@@ -151,7 +158,12 @@ text-align: center;
 color:white;
 margin-top: 60px;
 padding: 15px 15px;
-background-color: rgba(0, 0, 0, 0.75);
+background-color: #222223;
 min-width: 1vw;
 height:100px;
+background-image: linear-gradient(
+  to bottom,
+  rgba(161, 161, 161, 0.014),
+  rgba(0, 0, 0, 0.856)
+);
 }
