--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -14,17 +14,19 @@ header {
 p {
   font-family: "Univers", Helvetica, sans-serif;
 }
+.linespacing {
+  line-height: 30px;
+}
 @font-face {
   font-family: "Univers";
   src: url("../assets/fonts/Univers-Font/UniversBlack.ttf");
-  src: url("../assets/fonts/Univers-Font/UniversBlack.ttf")
-      format("truetype");
+  src: url("../assets/fonts/Univers-Font/UniversBlack.ttf") format("truetype");
 }
 @font-face {
   font-family: "Univers Light";
   src: url("../assets/fonts/Univers-Font/Univers-light-normal.ttf");
   src: url("../assets/fonts/Univers-Font/Univers-light-normal.ttf")
-      format("truetype");
+    format("truetype");
 }
 .center {
   text-align: center;
@@ -131,6 +133,28 @@ p {
   box-shadow: 3px 6px rgba(0, 0, 0, 0.2);
 }
 
+.calendarsection {
+  position: static;
+  display: block;
+  float: left;
+  margin: 95px 46px;
+  background-color: rgba(255, 255, 255);
+  border-radius: 16px;
+  outline: 10px, white;
+  width: 560px;
+  height: 500px;
+  padding: 1vw;
+  overflow-wrap: initial;
+  border: 1px solid rgb(68, 68, 68);
+  background-color: rgba(255, 255, 255, 0.397);
+  background-image: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0.089),
+    rgb(195, 209, 230, 0.5)
+  );
+  box-shadow: 3px 6px rgba(0, 0, 0, 0.2);
+}
+
 .nabsection {
   position: static;
   display: block;
@@ -153,17 +177,24 @@ p {
   box-shadow: 3px 6px rgba(0, 0, 0, 0.2);
 }
 
-.careertopblock{
-text-align: center;
-color:white;
-margin-top: 60px;
-padding: 15px 15px;
-background-color: #222223;
-min-width: 1vw;
-height:100px;
-background-image: linear-gradient(
-  to bottom,
-  rgba(161, 161, 161, 0.014),
-  rgba(0, 0, 0, 0.856)
-);
+.careertopblock {
+  text-align: center;
+  color: white;
+  margin-top: 60px;
+  padding: 15px 15px;
+  background-color: #222223;
+  min-width: 1vw;
+  height: 100px;
+  background-image: linear-gradient(
+    to bottom,
+    rgba(161, 161, 161, 0.014),
+    rgba(0, 0, 0, 0.856)
+  );
 }
+
+.fc-scroller {
+  overflow-y: hidden !important;
+}
+/* div.fc.fc-media-screen.fc-direction-ltr.fc-theme-standard {
+  height:100vh;
+} */
