--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -8,6 +8,13 @@ main {
     rgb(0, 0, 0)
   );
 }
+
+
+
+.textsize {
+font-size: 25px;
+line-height: 36px;
+}
 header {
   font-family: "Univers", Helvetica, sans-serif;
 }
@@ -40,6 +47,12 @@ p {
   background-position: relative;
   height: 100%;
   position: relative;
+}
+
+.opacity {
+  background-color: white;
+  opacity: 0.2;
+  height: 100vh;
 }
 
 .calendarback {
@@ -87,6 +100,30 @@ p {
   background-size: cover;
   background-position: relative;
   height: 100%;
+  position:relative;
+  z-index: 10;
+}
+
+.fullscreen {
+  width: max-content;
+  height: max-content;
+  z-index: 15;
+}
+
+.idletap {
+  text-align: center;
+  display: block;
+  position:fixed;
+  width: 100vw;
+  height: 150px;
+  color:rgb(0, 0, 0);
+  margin-top: -35px;
+  background-color: rgb(255, 238, 2);
+  z-index: 12;
+}
+
+.idletap h1 {
+  padding-bottom: 100px;
 }
 
 .homesection {
@@ -102,7 +139,7 @@ p {
   padding: 1vw;
   overflow-wrap: initial;
   border: 1px solid rgb(68, 68, 68);
-  background-color: rgba(255, 255, 255, 0.397);
+  background-color: rgba(255, 255, 255, 0.555);
   background-image: linear-gradient(
     to bottom,
     rgba(255, 255, 255, 0.089),
@@ -124,7 +161,7 @@ p {
   padding: 1vw;
   overflow-wrap: initial;
   border: 1px solid rgb(68, 68, 68);
-  background-color: rgba(255, 255, 255, 0.397);
+  background-color: rgba(255, 255, 255, 0.555);
   background-image: linear-gradient(
     to bottom,
     rgba(255, 255, 255, 0.089),
@@ -146,7 +183,7 @@ p {
   padding: 1vw;
   overflow-wrap: initial;
   border: 1px solid rgb(68, 68, 68);
-  background-color: rgba(255, 255, 255, 0.397);
+  background-color: rgba(255, 255, 255, 0.555);
   background-image: linear-gradient(
     to bottom,
     rgba(255, 255, 255, 0.089),
@@ -168,7 +205,7 @@ p {
   padding: 1vw;
   overflow-wrap: initial;
   border: 1px solid rgb(68, 68, 68);
-  background-color: rgba(255, 255, 255, 0.397);
+  background-color: rgba(255, 255, 255, 0.555);
   background-image: linear-gradient(
     to bottom,
     rgba(255, 255, 255, 0.089),
