--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -9,11 +9,9 @@ main {
   );
 }
 
-
-
 .textsize {
-font-size: 25px;
-line-height: 36px;
+  font-size: 25px;
+  line-height: 36px;
 }
 header {
   font-family: "Univers", Helvetica, sans-serif;
@@ -100,7 +98,7 @@ p {
   background-size: cover;
   background-position: relative;
   height: 100%;
-  position:relative;
+  position: relative;
   z-index: 10;
 }
 
@@ -113,10 +111,10 @@ p {
 .idletap {
   text-align: center;
   display: block;
-  position:fixed;
+  position: fixed;
   width: 100vw;
   height: 150px;
-  color:rgb(0, 0, 0);
+  color: rgb(0, 0, 0);
   margin-top: -35px;
   background-color: rgb(255, 238, 2);
   z-index: 12;
@@ -130,7 +128,7 @@ p {
   position: static;
   display: block;
   float: left;
-  margin: 120px 42px;
+  margin: 25vh 42px;
   background-color: rgba(255, 255, 255);
   border-radius: 16px;
   outline: 10px, white;
@@ -152,7 +150,7 @@ p {
   position: static;
   display: block;
   float: left;
-  margin: 40px 46px;
+  margin: 75px 46px;
   background-color: rgba(255, 255, 255);
   border-radius: 16px;
   outline: 10px, white;
@@ -174,7 +172,7 @@ p {
   position: static;
   display: block;
   float: left;
-  margin: 95px 46px;
+  margin: 21vh 46px;
   background-color: rgba(255, 255, 255);
   border-radius: 16px;
   outline: 10px, white;
@@ -196,7 +194,7 @@ p {
   position: static;
   display: block;
   float: left;
-  margin: 115px 42px;
+  margin: 170px 42px;
   background-color: rgba(255, 255, 255);
   border-radius: 16px;
   outline: 10px, white;
@@ -217,11 +215,11 @@ p {
 .careertopblock {
   text-align: center;
   color: white;
-  margin-top: 60px;
+  margin-top: 70px;
   padding: 15px 15px;
   background-color: #222223;
   min-width: 1vw;
-  height: 100px;
+  height: 120px;
   background-image: linear-gradient(
     to bottom,
     rgba(161, 161, 161, 0.014),
@@ -235,3 +233,29 @@ p {
 /* div.fc.fc-media-screen.fc-direction-ltr.fc-theme-standard {
   height:100vh;
 } */
+
+.map {
+  display: block;
+  outline: auto;
+  position: relative;
+  margin-top: -10px;
+  margin-left: 31px;
+  width: 20vw;
+  height: auto;
+  transition:ease-in-out 0.5s;
+}
+
+.imageContainer > img:focus {
+  width: 78vw;
+  height: auto;
+  margin-top: -243px;
+margin-left: -57px;
+  padding-left: 151px;
+  padding-right: 150px;
+  padding-top:35px;
+  padding-bottom:35px;
+  background-color: rgba(0, 0, 0, 0.726);
+  position: relative;
+  transition:ease-in-out 0.5s;
+  outline: none;
+}
