--- a/src/components/nav-bar/style.css
+++ b/src/components/nav-bar/style.css
@@ -35,7 +35,7 @@
 }
 .navbar {
   background-color: rgba(0, 0, 0, 0.75);
-  height: 70px;
+  height: 9.3vh;
   display: flex;
   justify-content: start;
   align-items: center;
